  - Fixed defext #217 NFO scanner now looks for directory.nfo first then specific video.nfo second
  - Fixed defect #223 When the first fanart file is corrupt or has an error
  - Enhancement  #224 Trailer names...
  - Fixed Defect #228 Thumbnail and poster generation fails if the artwork is not downloaded as part of this run
  - Fixed defect #235 Filmweb plugin - better url identifying in NFO files
  - Fixed Defect #243 Trailer tag not removing ending ']'
  - Enhancement  #?   Updated PosterScanner to search for the foldername.* and folder.* for coverart (for TV Series)


MovieJukebox 1.0.12 beta
-----------------------
  - Enhancement #66 Ability to recognise a movie trailer and add it to the movie html page
  - Enhancement #67 New category: Trailer
    Trailers must contain the word Trailer (case-insensitive) somewhere between brackets []
    Trailers will only be included in the new "Trailers" category, and no other genre or alpha-listing
  - Fixed defect #122 Patch for MovieNFOScanner.java for old style imdb urls
  - Enhancement #123 improved MPAA rating organization in the gfb107 skin
    Added certification.ordering property to skin.properties in both gfb107 skins
  - Enhancement #127 TV Episode numbering scheme
    There is only possibility to fix this issue by users themselves.
    Episode name formatting was moved from java and XML to skin layout.
  - Fixed defect #132 Unable to parse year of TV episode on IMDb
  - Fixed defect #134 Rating calculation not correct
  - Fixed defect #137 New TV episodes not added to season page
    Now they are added and titles are taken from movie DB site (eg imdb)
  - Enhancement #146 "Play all" - Feature: generate .jsp-playlists for multipart movies (CD1, CD2,...) and tv-series
  - Enhancement #181 Support of local stored coverarts instead of search for them on the internet
  - Fixed defect #185 IMDB scanner is returning rating = "-1" in xml file
  - Fixed defect #187 trailing character in some IMDB plot output