@@ -19,6 +19,7 @@ MovieJukebox 1.0.13 beta
   - Fixed defect #223 When the first fanart file is corrupt or has an error
   - Enhancement  #224 Trailer names...
   - Fixed Defect #228 Thumbnail and poster generation fails if the artwork is not downloaded as part of this run
+  - Fixed Defect #230 Ignore trailers in next & last entry
   - Fixed defect #235 Filmweb plugin - better url identifying in NFO files
   - Fixed Defect #243 Trailer tag not removing ending ']'
   - Enhancement  #?   Updated PosterScanner to search for the foldername.* and folder.* for coverart (for TV Series)
